Kubernetes/AgrOne/AgrOne-Dev/Keycloak-Dev/keycloak-dev-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-dev
  namespace: agrotech-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-dev
  template:
    metadata:
      labels:
        app: keycloak-dev
    spec:
      containers:
        - name: keycloak-dev
          image: quay.io/keycloak/keycloak
          args: ["start-dev"]
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
          volumeMounts:
            - name: keycloak-dev-storage
              mountPath: /opt/jboss/keycloak-dev/standalone/data

      volumes:
        - name: keycloak-dev-storage
          persistentVolumeClaim:
            claimName: keycloak-dev-pvc
