Kubernetes/AgrOne/AgrOne-Dev/Keycloak-Dev/keycloak-dev-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-dev-db-service
  namespace: agrotech-dev
spec:
  selector:
    app: keycloak-dev-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
