Kubernetes/AgrOne/AgrOne-Dev/Keycloak-Dev/keycloak-dev-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: agrotech-dev
spec:
  type: NodePort
  selector:
    app: keycloak-dev
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
