Kubernetes/AgrOne/AgrOne-Dev/Keycloak-Dev/keycloak-dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-dev-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: agrotech-dev
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - 'keycloak-dev.prodata.local'
      secretName: tls-secret-prodata-local
  rules:
  - host: keycloak-dev.prodata.local
    http:
      paths:
      - backend:
          service:
            name: keycloak-service
            port:
              number: 8080
        path: /
        pathType: Prefix
